Added the Maven Tomcat plugin so you can run this from IntelliJ or Eclipse/STS