@@ -13,6 +13,7 @@
 		<spring.version>3.1.1.RELEASE</spring.version>
 		<tiles.version>2.2.1</tiles.version>
 		<netbeans.hint.deploy.server>Tomcat60</netbeans.hint.deploy.server>
+        <tomcat.version>6.0.29</tomcat.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -163,6 +164,86 @@
 					<target>1.6</target>
 				</configuration>
 			</plugin>
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat6-maven-plugin</artifactId>
+                <version>2.0</version>
+                <configuration>
+                    <systemProperties>
+                        <JAVA_OPTS>-Xmx1024m -XX:MaxPermSize=1024m</JAVA_OPTS>
+                    </systemProperties>
+                    <httpsPort>8443</httpsPort>
+                    <keystoreFile>${basedir}/src/test/resources/keystore.jks</keystoreFile>
+                    <keystorePass>changeit</keystorePass>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.tomcat</groupId>
+                        <artifactId>catalina</artifactId>
+                        <version>${tomcat.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.tomcat</groupId>
+                        <artifactId>catalina-ha</artifactId>
+                        <version>${tomcat.version}</version>
+                        <scope>runtime</scope>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.tomcat</groupId>
+                        <artifactId>tribes</artifactId>
+                        <version>${tomcat.version}</version>
+                        <scope>runtime</scope>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.tomcat</groupId>
+                        <artifactId>el-api</artifactId>
+                        <version>${tomcat.version}</version>
+                        <scope>runtime</scope>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.tomcat</groupId>
+                        <artifactId>jasper</artifactId>
+                        <version>${tomcat.version}</version>
+                        <scope>runtime</scope>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.tomcat</groupId>
+                        <artifactId>jasper-el</artifactId>
+                        <version>${tomcat.version}</version>
+                        <scope>runtime</scope>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.tomcat</groupId>
+                        <artifactId>jasper-jdt</artifactId>
+                        <version>${tomcat.version}</version>
+                        <scope>runtime</scope>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.tomcat</groupId>
+                        <artifactId>jsp-api</artifactId>
+                        <version>${tomcat.version}</version>
+                        <scope>runtime</scope>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.tomcat</groupId>
+                        <artifactId>servlet-api</artifactId>
+                        <version>${tomcat.version}</version>
+                        <scope>runtime</scope>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.tomcat</groupId>
+                        <artifactId>coyote</artifactId>
+                        <version>${tomcat.version}</version>
+                        <scope>runtime</scope>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.tomcat</groupId>
+                        <artifactId>dbcp</artifactId>
+                        <version>${tomcat.version}</version>
+                        <scope>runtime</scope>
+                    </dependency>
+                </dependencies>
+            </plugin>
 		</plugins>
 		<finalName>tilesExample</finalName>
 	</build>
